--- a/css/styles.css
+++ b/css/styles.css
@@ -792,7 +792,7 @@ justify-content: center;
 /*Рассылка*/
 
 .footer-box:nth-child(3) {
-  margin-left: 93px;
+  margin-left: auto;
 }
 .subscribe {
   display: flex;
